--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -138,7 +138,7 @@
     gap: 50px;
 }
 
-.dashboard-header {
+.dashboard-header, .profile-header {
     width: 100%;
     background-color: var(--color-white);
     border-radius: 8px;
@@ -149,7 +149,7 @@
     align-items: center;
 }
 
-.dashboard-header .welcome-subtext {
+.dashboard-header .welcome-subtext, .profile-header .welcome-subtext {
     color: var(--color-dark-gray);
     margin-top: 15px;
 }
@@ -536,3 +536,83 @@
     font-size: 1.1rem;
 }
 
+.profile-container {
+    width: 100%;
+}
+
+.profile-content {
+    background-color: var(--color-white);
+    box-shadow: var(--shadow-secondary);
+    width: 100%;
+    margin-top: 30px;
+    border-radius: 8px;
+    padding: 30px;
+}
+
+.profile-img {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 5px solid var(--secondary-color);
+    margin-bottom: 30px;
+}
+
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    margin: auto;
+    cursor: pointer;
+}
+
+.profile-content-data {
+    width: 100%;
+    padding: 10px;
+    background-color: var(--color-light-gray);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.profile-name-bio {
+    text-align: center;
+}
+
+.profile-name-bio h2 {
+    margin-bottom: 10px;
+}
+
+.profile-content-data h3 {
+    margin-bottom: 15px;
+}
+
+.profile-content-data p {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid var(--color-border-gray);
+    margin-bottom: 10px;
+    padding-top: 8px;
+}
+
+.profile-content .edit-profile-btn {
+    width: 150px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 102, 255);
+    color: white;
+    padding: 10px;
+    border-radius: 6px;
+    text-decoration: none;
+    margin-left: auto;
+    transition: 0.5s;
+}
+
+.profile-content .edit-profile-btn:hover {
+    background-color: var(--secondary-color);
+}
