--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -559,14 +559,17 @@
     align-items: center;
     border: 5px solid var(--secondary-color);
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .profile-img img{
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     margin: auto;
-    cursor: pointer;
 }
 
 .profile-content-data {
