--- a/public/assets/css/news.css
+++ b/public/assets/css/news.css
@@ -1,5 +1,110 @@
 .news-wrapper {
-    padding: 50px 30px;
+    padding: 50px 70px;
 }
 
-.
+.news-route {
+    margin-bottom: 30px;
+}
+
+.news-route a {
+    color: var(--primary-color); 
+}
+
+.updates-heading {
+    font-size: 45px;
+}
+
+.trending-news-card {
+    width: 100%;
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.trending-news-card .trending-news-card-img {
+    width: 55%;
+    height: 300px;
+    text-decoration: none;
+    border-radius: 14px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.trending-news-card .trending-news-card-img img,
+.news-card .news-card-img img{
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transition: .7s;
+}
+
+.trending-news-card .trending-news-card-img img:hover,
+.news-card .news-card-img img:hover {
+    transform: scale(1.2);
+}
+
+.trending-news-card .trending-news-card-details {
+    width: 40%;
+}
+
+.trending-news-card .trending-news-card-details {
+    width: 40%;
+}
+
+.trending-news-card .trending-news-card-title,
+.news-card .news-card-title {
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 18px;
+}
+
+.trending-news-card .trending-news-card-title h2,
+.news-card .news-card-title h2 {
+    transition: 0.5s;
+}
+
+.trending-news-card .trending-news-card-title h2:hover,
+.news-card .news-card-title h2:hover {
+    color: var(--color-hover);
+}
+
+.trending-news-card .trending-news-card-date-time-content,
+.news-card .news-card-date-time-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.trending-news-card .trending-news-card-date-time-content p span,
+.news-card .news-card-date-time-content p span {
+    font-weight: 600;
+}
+
+.news-card-row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    transition: all 0.3s ease;
+    margin-bottom: 20px !important;
+}
+
+.news-card {
+    background-color: var(--color-white);
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.news-card .news-card-img {
+    width: 100%;
+    overflow: hidden !important;
+    height: 180px;
+    background-color: orange;
+    display: block;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
