--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,7 +42,7 @@ body {
 p {
     font-size: var(--text-small-font-size);
     line-height: 1.5;
-    color: var(--secondary-color);
+    color: var(--color-secondary-text);
 }
 
 h3 {
@@ -949,6 +949,10 @@ nav ul a.active {
     width: 100%;
     height: 550px;
     overflow: hidden;
+}
+
+.hero-container p {
+    color: var(--color-white);
 }
 
 .hero-slide {
@@ -2254,5 +2258,103 @@ footer .socials a {
     
     .footer-section:nth-child(4) {
         width: 100%;
+    }
+}
+
+/* page-route */
+.page-route {
+    margin-bottom: 30px;
+    color: var(--secondary-color);
+}
+
+.page-route a {
+    color: var(--primary-color); 
+}
+
+/* preloader */
+.pre-loader-container {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    transition: opacity 0.6s ease;
+}
+
+.pre-loader{
+    text-align: center;
+}
+
+.pre-loader-wrapper {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+    margin: auto;
+}
+
+.pre-loader-border {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 6px solid rgba(0, 0, 0, 0.1);
+    border-top-color: var(--color-hover); /* spinner color */
+    border-radius: 50%;
+    animation: spin 1.2s linear infinite;
+    z-index: 1;
+}
+
+.pre-loader-image {
+    width: 60px;
+    object-fit: contain;
+    animation: pulse 1.2s ease-in-out infinite;
+    z-index: 2;
+}
+
+.pre-loader h1 {
+    font-size: 40px;
+    margin-top: 20px;
+    color: var(--secondary-color);
+}
+
+.loader-tagline {
+    font-size: 1rem;
+    color: var(--color-hover);
+    margin-top: 0.5rem;
+    text-align: center;
+    font-style: italic;
+}
+
+.fadeIn {
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes pulse {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
     }
 }
