--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -298,6 +298,11 @@ nav ul a.active {
     color: var(--color-hover);
 }
 
+svg {
+    width: 20px;
+    height: 20px;
+}
+
 .cart-icon, .wishlist-icon, .bag-icon {
     position: relative;
 }
@@ -538,7 +543,7 @@ nav ul a.active {
     z-index: 1000;
     display: none;
     pointer-events: auto;
-    cursor: pointer;
+    cursor: url('../images/icons/cursor-close.svg') 16 16, not-allowed;
 }
 
 .overlay.active {
@@ -600,6 +605,14 @@ nav ul a.active {
 
 .cart-menu-close:hover {
     background-color: rgba(0, 0, 0, 0.05);
+}
+
+.cart-menu-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: calc(90vh - 70px);
 }
 
 /* Cart Items */
@@ -731,6 +744,11 @@ nav ul a.active {
 
 .empty-cart-icon {
     margin-bottom: 20px;
+
+    svg {
+        width: 120px;
+        height: 120px;
+    }
 }
 
 .empty-cart p {
@@ -2269,92 +2287,4 @@ footer .socials a {
 
 .page-route a {
     color: var(--primary-color); 
-}
-
-/* preloader */
-.pre-loader-container {
-    width: 100%;
-    height: 100vh;
-    background-color: var(--color-white);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    transition: opacity 0.6s ease;
-}
-
-.pre-loader{
-    text-align: center;
-}
-
-.pre-loader-wrapper {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    background-color: var(--secondary-color);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-    margin: auto;
-}
-
-.pre-loader-border {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 6px solid rgba(0, 0, 0, 0.1);
-    border-top-color: var(--color-hover); /* spinner color */
-    border-radius: 50%;
-    animation: spin 1.2s linear infinite;
-    z-index: 1;
-}
-
-.pre-loader-image {
-    width: 60px;
-    object-fit: contain;
-    animation: pulse 1.2s ease-in-out infinite;
-    z-index: 2;
-}
-
-.pre-loader h1 {
-    font-size: 40px;
-    margin-top: 20px;
-    color: var(--secondary-color);
-}
-
-.loader-tagline {
-    font-size: 1rem;
-    color: var(--color-hover);
-    margin-top: 0.5rem;
-    text-align: center;
-    font-style: italic;
-}
-
-.fadeIn {
-    animation: fadeIn 1.5s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes pulse {
-    0%, 100% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
 }
